Fixed overflow

--- a/base.css
+++ b/base.css
@@ -3,11 +3,13 @@ body {
 
 	width: 100vw;
 	height: 100vh;
+
+	overflow: hidden;
 }
 
 embed {
 	margin: 0px;
 
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
